updated login page

--- a/login.html
+++ b/login.html
@@ -110,7 +110,7 @@
         .hero {
             height: 500px;
             width: auto;
-            background: url('Corpus_Christi_College_New_Court,_Cambridge,_UK_-_Diliff.jpeg') no-repeat center;
+            background: url('images/Corpus_Christi_College_New_Court,_Cambridge,_UK_-_Diliff.jpeg') no-repeat center;
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -173,42 +173,42 @@
 
         <div class="featuresbody flex">
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-44-53.png" alt="Dashboard Icon">
+                <img src="images/Screenshot from 2025-05-12 16-44-53.png" alt="Dashboard Icon">
                 <h3 class="featur">Student Dashboard</h3>
                 <p>Get an overview of your academic progress, upcoming classes, and important announcements.</p>
                 <a href="#" class="secondarybutton">Explore</a>
             </div>
 
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-47-26.png" alt="Course Icon">
+                <img src="images/Screenshot from 2025-05-12 16-47-26.png" alt="Course Icon">
                 <h3 class="featur">Course Management</h3>
                 <p>Enroll in courses, view curriculum, and stay up-to-date with your schedules.</p>
                 <a href="#" class="secondarybutton">View Courses</a>
             </div>
 
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-48-22.png" alt="Assignment Icon">
+                <img src="images/Screenshot from 2025-05-12 16-48-22.png" alt="Assignment Icon">
                 <h3 class="featur">Assignments</h3>
                 <p>Submit assignments online, download resources, and track deadlines easily.</p>
                 <a href="#" class="secondarybutton">Submit Work</a>
             </div>
 
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-49-46.png" alt="Grades Icon">
+                <img src="images/Screenshot from 2025-05-12 16-49-46.png" alt="Grades Icon">
                 <h3 class="featur">Grades & Reports</h3>
                 <p>Access your marks, performance reports, and feedback from faculty.</p>
                 <a href="#" class="secondarybutton">Check Grades</a>
             </div>
 
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-53-44.png" alt="Profile Icon">
+                <img src="images/Screenshot from 2025-05-12 16-53-44.png" alt="Profile Icon">
                 <h3 class="featur">Profile Management</h3>
                 <p>Update your personal details, change password, and manage preferences.</p>
                 <a href="#" class="secondarybutton">Edit Profile</a>
             </div>
 
             <div class="featured-card flex">
-                <img src="Screenshot from 2025-05-12 16-51-54.png" alt="Support Icon">
+                <img src="images/Screenshot from 2025-05-12 16-51-54.png" alt="Support Icon">
                 <h3 class="featur">Help & Support</h3>
                 <p>Get assistance with portal-related issues or contact administration directly.</p>
                 <a href="#" class="secondarybutton">Contact Support</a>
